Adaptação do MITT para suportar Java 11