@@ -15,7 +15,7 @@
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
- * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+ * NON INFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
  * LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
  * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
@@ -27,9 +27,8 @@ import br.com.dafiti.mitt.model.Field;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -39,7 +38,9 @@ import java.util.logging.Logger;
 import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.reflections.Reflections;
+import org.springframework.beans.factory.config.BeanDefinition;
+import org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider;
+import org.springframework.core.type.filter.AssignableTypeFilter;
 
 /**
  *
@@ -49,8 +50,8 @@ public class Scanner {
 
     private static Scanner scanner;
 
-    private final Map<String, Transformable> instances = new ConcurrentHashMap();
-    private final Map<String, Class<? extends Transformable>> clazzes = new ConcurrentHashMap();
+    private final Map<String, Transformable> instances = new ConcurrentHashMap<>();
+    private final Map<String, Class<? extends Transformable>> clazzes = new ConcurrentHashMap<>();
 
     private static final String LIST_OPEN = "[[";
     private static final String LIST_CLOSE = "]]";
@@ -61,14 +62,18 @@ public class Scanner {
      *
      */
     private Scanner() {
-        Set<Class<? extends Transformable>> classes = new Reflections().getSubTypesOf(Transformable.class);
-        Iterator<Class<? extends Transformable>> iterator = classes.iterator();
+        ClassPathScanningCandidateComponentProvider provider = new ClassPathScanningCandidateComponentProvider(false);
+        provider.addIncludeFilter(new AssignableTypeFilter(Transformable.class));
+        Set<BeanDefinition> transformations = provider.findCandidateComponents("br/com/dafiti");
 
-        while (iterator.hasNext()) {
-            Class<? extends Transformable> tranformation = iterator.next();
-            String transformationName = tranformation.getSimpleName().toLowerCase();
-            this.clazzes.put(transformationName, tranformation);
-        }
+        transformations.forEach(transformation -> {
+            try {
+                Class<?> clazz = Class.forName(transformation.getBeanClassName());
+                this.clazzes.put(clazz.getSimpleName().toLowerCase(), (Class<? extends Transformable>) clazz);
+            } catch (ClassNotFoundException ex) {
+                Logger.getLogger(Scanner.class.getName()).log(Level.SEVERE, "Fail instantiating class " + transformation.getBeanClassName(), ex);
+            }
+        });
     }
 
     /**
@@ -111,8 +116,8 @@ public class Scanner {
 
         //Identifies if should parse content.
         if (content.contains("::")) {
-            List<String> parameters = new ArrayList();
-            List<String> transformationClassParameterListItem = new ArrayList();
+            List<String> parameters = new ArrayList<>();
+            List<String> transformationClassParameterListItem = new ArrayList<>();
 
             //Sets an ID for each transformation. 
             String id = DigestUtils.md5Hex(content).toUpperCase();
@@ -123,13 +128,13 @@ public class Scanner {
             //Defines the field name as anonymous plus transformation ID if it was not provided.
             fieldName = fieldName.isEmpty() ? ("anonymous_" + id) : fieldName;
 
-            //Identifies if it have a transformation instance in cache. 
+            //Identifies if it has a transformation instance in cache.
             if (instances.containsKey(id)) {
                 instance = instances.get(id);
             } else {
                 //Identifies each part of the function. 
                 String transformation = StringUtils.substringAfter(content, "::");
-                String tranformantionClass = StringUtils.substringBefore(transformation, "(").toLowerCase();
+                String transformationClass = StringUtils.substringBefore(transformation, "(").toLowerCase();
                 String transformationClassParameter = StringUtils.substringBeforeLast(StringUtils.substringAfter(transformation, "("), ")");
                 String transformationClassParameterList = StringUtils.substringBefore(StringUtils.substringAfter(transformationClassParameter, LIST_OPEN), LIST_CLOSE);
 
@@ -158,29 +163,26 @@ public class Scanner {
                 //Identifies if any parameter should not be parsed.
                 if (transformationClassParameter.startsWith(FREEZE_OPEN)
                         && transformationClassParameter.endsWith(FREEZE_CLOSE)) {
-                    //**...** identifies freezed parameter. 
+                    //**...** identifies frozen parameter.
                     parameters.add(
                             transformationClassParameter
                                     .replace(FREEZE_OPEN, "")
                                     .replace(FREEZE_CLOSE, ""));
                 } else {
-                    //Otherwise, it encode parameters using encodeBase64String to avoid break the parser. 
-                    List<String> encoded = Arrays.asList(
-                            StringUtils.split(
-                                    transformationClassParameter = transformationClassParameter.replace(
-                                            transformationClassParameterList,
-                                            Base64.encodeBase64String(
-                                                    String.join("+", transformationClassParameterListItem).getBytes()
-                                            )
-                                    ), ','));
+                    //Otherwise, it encodes parameters using encodeBase64String to avoid break the parser.
+                    String[] encoded = StringUtils.split(
+                            transformationClassParameter = transformationClassParameter.replace(
+                                    transformationClassParameterList,
+                                    Base64.encodeBase64String(
+                                            String.join("+", transformationClassParameterListItem).getBytes()
+                                    )
+                            ), ',');
 
-                    //After encode, identifies if freezed parameters are intact. 
+                    //After encode, identifies if frozen parameters are intact.
                     token = "";
                     partial = false;
 
-                    for (int i = 0; i < encoded.size(); i++) {
-                        String value = encoded.get(i);
-
+                    for (String value : encoded) {
                         if (value.startsWith(FREEZE_OPEN)
                                 && value.endsWith(FREEZE_CLOSE)) {
                             parameters.add(value.replace(FREEZE_OPEN, "").replace(FREEZE_CLOSE, ""));
@@ -198,16 +200,16 @@ public class Scanner {
                     }
                 }
 
-                //Identifies which transformation should be runned. 
-                if (this.clazzes.containsKey(tranformantionClass)) {
+                //Identifies which transformation should run.
+                if (this.clazzes.containsKey(transformationClass)) {
                     try {
                         //Instantiate transformation class by it name. 
-                        Class<? extends Transformable> clazz = this.clazzes.get(tranformantionClass);
+                        Class<? extends Transformable> clazz = this.clazzes.get(transformationClass);
                         Constructor[] constructors = clazz.getDeclaredConstructors();
 
                         //Identifies if the transformation has parameter. 
                         if (constructors.length == 0) {
-                            instance = clazz.newInstance();
+                            instance = clazz.getDeclaredConstructor().newInstance();
                         } else {
                             //Iterates each transformation constructors. 
                             for (Constructor constructor : constructors) {
@@ -215,18 +217,18 @@ public class Scanner {
 
                                 //Identifies parameter number on each constructor. 
                                 if (transformationParameterNumber == 0) {
-                                    instance = clazz.newInstance();
+                                    instance = clazz.getDeclaredConstructor().newInstance();
                                     break;
                                 } else {
                                     if (constructor.getParameterCount() == transformationParameterNumber) {
-                                        List<Object> constructorParameters = new ArrayList();
+                                        List<Object> constructorParameters = new ArrayList<>();
 
                                         //Iterates each constructor parameter. 
                                         for (int i = 0; i < transformationParameterNumber; i++) {
                                             //Identifies each parameter type. 
                                             switch (constructor.getParameterTypes()[i].getSimpleName()) {
                                                 case "List":
-                                                    List<Field> fieldList = new ArrayList();
+                                                    List<Field> fieldList = new ArrayList<>();
 
                                                     for (String parameter : parameters) {
                                                         //If the parameter is a list, it should be decoded using decodeBase64. 
@@ -252,9 +254,7 @@ public class Scanner {
                                                     break;
                                                 default:
                                                     if (constructor.getParameterTypes()[i].isPrimitive()) {
-                                                        Method method = constructor
-                                                                .getParameterTypes()[i]
-                                                                .getDeclaredMethod("valueOf", String.class);
+                                                        Method method = constructor.getParameterTypes()[i].getDeclaredMethod("valueOf", String.class);
                                                         constructorParameters.add(method.invoke(parameters.get(i).trim()));
                                                     }
 
@@ -279,12 +279,12 @@ public class Scanner {
                             | NoSuchMethodException
                             | SecurityException ex) {
 
-                        Logger.getLogger(Scanner.class.getName()).log(Level.SEVERE, "Fail evaluating transformation " + tranformantionClass + " with parameter  " + transformationClassParameter, ex);
+                        Logger.getLogger(Scanner.class.getName()).log(Level.SEVERE, "Fail evaluating transformation " + transformationClass + " with parameter  " + transformationClassParameter, ex);
                     }
                 }
             }
         } else if (content.contains(">>")) {
-            //Identifies if should rename a field.
+            //Identifies if it should rename a field.
             fieldName = StringUtils.substringBefore(content, ">>");
             alias = StringUtils.substringAfter(content, ">>");
         } else {
